<resources>
    <string name="app_name">PittaSNSApp</string>
    <string name="signin_id">아이디</string>
    <string name="signin_pw">비밀번호</string>
    <string name="signin_id_hint">아이디를 입력 하세요</string>
    <string name="signin_pw_hint">비밀번호를 입력 하세요</string>
    <string name="signin_login_btn">로그인</string>
    <string name="signin_toast_fail">아이디/비밀번호를 확인해주세요</string>
    <string name="signin_toast_success">로그인 성공</string>
    <string name="signin_join_btn">회원가입</string>
    <string name="signup_title">회원가입</string>
    <string name="signup_id">아이디</string>
    <string name="signup_id_hint">영문,숫자: 5 ~ 20자</string>
    <string name="signup_pw">비밀번호</string>
    <string name="signup_pw_hint">영문,숫자,특수문자: 8~16자</string>
    <string name="signup_pw_recheck">비밀번호 재확인</string>
    <string name="signup_name">이름</string>
    <string name="signup_duplicate_btn">중복확인</string>
    <string name="signin_back_btn">돌아가기</string>
    <string name="signup_join_btn">회원가입</string>
    <string name="join_btn_toast_fail_blank">입력되지 않은 정보가 있습니다</string>
    <string name="join_btn_toast_fail_condition">모든 조건을 만족해 주세요</string>
    <string name="join_btn_toast_success">회원가입이 완료되었습니다</string>
    <string name="check_btn_toast_condition">아이디 조건을 만족해주세요</string>
    <string name="check_btn_toast_duplicate">중복되는 계정이 존재합니다</string>
    <string name="check_btn_toast_success">사용 가능한 아이디 입니다.</string>
    <string name="signup_id_blank">아이디를 입력해주세요</string>
    <string name="signup_id_condition">아이디 조건이 맞지 않습니다</string>
    <string name="signup_pw_blank">비밀번호를 입력해주세요</string>
    <string name="signup_pw_condition">비밀번호 조건이 일치하지 않습니다</string>
    <string name="signup_pw_check_blank">비밀번호를 다시 입력해주세요</string>
    <string name="signup_pw_check_conditon">비밀번호가 일치하지 않습니다</string>
    <string name="signup_name_blank">이름을 입력해주세요</string>
    <string name="user_detail_id_text_view">아이디</string>
    <string name="user_detail_name_text_view">이름</string>
    <string name="user_detail_member_name">팀원 이름</string>
    <string name="user_detail_id">아이디</string>
    <string name="user_detail_logout">로그아웃</string>
    <string name="user_detail_introduce">자기소개 - 한 줄로 짧게 자기소개 하기</string>

    <string name="post_title_text">제목</string>
    <string name="post_title_input_hint">제목을 입력해주세요</string>
    <string name="post_description_text">내용</string>
    <string name="post_description_input_hint">내용을 입력해주세요</string>
    <string name="submit_text">확인</string>
    <string name="search_text">검색</string>
    <string name="setting_text">설정</string>
    <string name="check_value_question">값을 확인해주세요</string>
    <string name="pitta">Pitta</string>
    <string name="mydata_text">내 정보</string>
    <string name="check_post_delete_question">이글을 삭제하시겠습니까?</string>
    <string name="logout_question">로그아웃 하시겠습니까?</string>
</resources>